# tokori

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  install.sh  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: aur.yml  ci.yml  docs.yml  release.yml
addon-skill/: README.md  SKILL.md  reference.md
addon-skill/templates/vocab-import/: entry.js  manifest.json  sample.md  test.mjs
docs/: index.md  sync-protocol.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: Layout.vue  custom.css  index.ts
docs/guides/: addons.md  architecture.md  build-from-source.md  contributing.md  data.md  develop-with-an-agent.md  dictionaries.md  faq.md  install.md  mcp.md  patterns.md  plugins.md  providers.md  quickstart.md  reader.md  remote-pc.md  study-guide.md  vocabulary.md  workspaces.md
docs/reference/: api.md  auth.md  dict.md  errors.md  media.md  pack-format.md  remote.md  vocab.md  workspaces.md
mcp-server/: .gitignore  README.md  SKILL.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: api.ts  index.ts
packaging/aur/: PKGBUILD.template  README.md
packs/: chinese-hsk1-new3-free.json  german-a1-free.json  japanese-n5-free.json  korean-topik1-free.json  spanish-a1-free.json
scripts/: build-chinese-pack.mjs  build-german-a1-free-pack.cjs  build-hsk1-free-pack.cjs  build-japanese-n5-free-pack.cjs  build-korean-topik1-free-pack.cjs  build-spanish-a1-free-pack.cjs  release-check.mjs  release-local.mjs
src/: App.tsx  index.css  main.tsx  spotlight-app.tsx  vite-env.d.ts  voice-ask-app.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_server.rs  commands.rs  lib.rs  main.rs  media_url.rs  ocr.rs  providers.rs  tunnel.rs  whisper_local.rs
src/components/: add-custom-word-dialog.tsx  auth-gate.tsx  book-import-dialog.tsx  card-audio-field.tsx  card-composer-dialog.tsx  card-detail-dialog.tsx  card-face.tsx  card-template-dialog.tsx  chapter-advance-flow.tsx  character-detail.tsx  chat-markdown-impl.tsx  chat-markdown.tsx  cloud-signin-dialog.tsx  dict-search-modal.tsx  error-boundary.tsx  extract-vocab-dialog.tsx  flashcard-view-dialog.tsx  glance-card.tsx  global-add-card.tsx  gloss-list.tsx  grammar-profile-panel.tsx  inline-live-mode.tsx  library-item-controls.tsx  live-voice-dialog.tsx  mic-waveform.tsx  missing-dictionary-banner.tsx  model-picker.tsx  oauth-signin-buttons.tsx  onboarding-dialog.tsx  pack-import-dialog.tsx  pack-preview-dialog.tsx  packs-browser.tsx  page-overlay-reader.tsx  pair-request-dialog.tsx  passage-card.tsx  paste-text-dialog.tsx  pinyin.tsx  pricing-dialog.tsx  pronunciation-card.tsx  push-to-anki.tsx  (+16 more)
src/components/dashboard/: charts.tsx  goals-card.tsx  journey-card.tsx  log-activity-dialog.tsx
src/components/settings/: about-section.tsx  addons-section.tsx  anki-section.tsx  chinese-section.tsx  cloud-section.tsx  demo-locked-panel.tsx  desktop-section.tsx  dictionaries-section.tsx  local-api-section.tsx  personal-dict-section.tsx  profile-section.tsx  prompts-section.tsx  providers-section.tsx  remote-access-section.tsx  storage-section.tsx  study-section.tsx  translation-section.tsx  tts-section.tsx
src/components/shell/: shell.tsx  sidebar-glyph.tsx  sidebar-session-control.tsx  sidebar.tsx  tier-badge.tsx  title-bar.tsx
src/components/stats/: recent-sessions.tsx  report-panels.tsx
src/components/study/: ai-drawer.tsx
src/components/ui/: button.tsx  input.tsx  select.tsx  sonner.tsx  textarea.tsx
src/components/views/: activities-view.tsx  chat-view.tsx  collections-view.tsx  dashboard-view.tsx  dictionaries-view.tsx  flashcards-view.tsx  habits-view.tsx  immersion-view.tsx  journal-view.tsx  journey-view.tsx  library-view.tsx  milestones-view.tsx  notes-view.tsx  placeholder-view.tsx  reader-view.tsx  search-view.tsx  settings-view.tsx  statistics-view.tsx  vocab-view.tsx
src/data/: cedict-mini.ts
src/lib/: analyzer-event.ts  analyzer-source-context.tsx  anki.ts  ask-intent.ts  background-chat-context.tsx  book-import.ts  build-flags.ts  card-layout.ts  card-styles.ts  chat-actions-context.tsx  chat-list-context.tsx  chat-providers.ts  chinese-config.ts  cloud-client.ts  cloud-context.tsx  cloud-dict.ts  cloud-refresh.ts  cloze.ts  compose-card-event.ts  dashboard-layout.ts  db.ts  demo-seed.ts  dict-availability.ts  dict-detail.ts  dict-search-rank.ts  display-context.tsx  examples.ts  external-session.ts  focus.ts  free-packs.ts  fsrs.ts  global-search.ts  goals.ts  grammar-profile.ts  habits.ts  hanzi-stroke-data.ts  journal.ts  journey-coach.ts  knowledge.ts  language-profiles.ts  (+59 more)
src/lib/addons/: import-normalize.ts  loader.ts  manifest.ts  registry.ts  sandbox-worker.ts
src/lib/card-enrich/: api.ts  registry.ts
src/lib/dictionaries/: custom-import.ts  lemmatizer.ts  registry.ts
test/: addon-import-normalize.test.ts  addon-manifest.test.ts  ask-intent.test.ts  card-enrich-pipeline.test.ts  card-layout.test.ts  chat-markdown-split.test.ts  cloud-vocab-pull.test.ts  custom-dict-import.test.ts  custom-study.test.ts  demo-detection.test.ts  dict-availability.test.ts  dict-detail.test.ts  dict-registry.test.ts  dict-search-rank.test.ts  examples.test.ts  free-packs.test.ts  fsrs.test.ts  grammar-profile.test.ts  has-reviewed-today.test.ts  hidden-plugins-filter.test.ts  journey-coach.test.ts  kaniwani-plan.test.ts  languages.test.ts  learning-journey.test.ts  lemmatizer.test.ts  level-scales.test.ts  level.test.ts  library-order.test.ts  library-units.test.ts  lookup-result.test.ts  media-order.test.ts  media-stats.test.ts  media-url.test.ts  mic-waveform.test.ts  pack-import.test.ts  pack-media.test.ts  pack-seed-known.test.ts  personal-dict-override.test.ts  pinyin.test.ts  pitch.test.ts  (+19 more)
(+40 files in other folders)
